--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@android:drawable/ic_lock_idle_charging"
+        android:icon="@mipmap/ic_bk"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
