--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     compile 'com.google.code.gson:gson:2.5'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
+// // // // CUSTOM // // //
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 //    compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
-    compile 'com.github.clans:fab:1.6.2'
 }
